--- a/package/package.json
+++ b/package/package.json
@@ -1,16 +1,11 @@
 {
   "name": "react-native-async-storage-devtool",
-  "version": "1.0.1",
-  "description": "A devtool for React Native AsyncStorage",
-  "author": "Kenny Krosky",
-  "license": "MIT",
-  "main": "dist/index.js",
+  "version": "1.0.0",
+  "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "react-native": "dist/index.js",
-  "files": [
-    "dist"
-  ],
+  "author": "Kenny Krosky",
+  "description": "A devtool for React Native AsyncStorage",
   "scripts": {
     "build": "tsup"
   },
@@ -29,10 +24,15 @@
     "react": ">=17",
     "react-native": ">=0.64"
   },
+  "license": "MIT",
   "devDependencies": {
     "@types/react": "^18.2.64",
     "@types/react-native": "^0.72.8",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3"
-  }
+  },
+  "files": [
+    "dist"
+  ],
+  "react-native": "dist/index.cjs"
 }
