--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "debugging"
   ],
   "peerDependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.0",
+    "@react-native-async-storage/async-storage": ">=1.17.0",
     "react": ">=17",
     "react-native": ">=0.64"
   },
